<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Level1Activity">

    <TextView
        android:id="@+id/question"
        android:layout_width="634dp"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/scribble_font"
        android:gravity="center"
        android:text="@string/question_here"
        android:textColor="@color/colorDarkGrey"
        android:textSize="84sp"
        app:layout_constraintBottom_toTopOf="@+id/multipleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <TextView
        android:id="@+id/leveltitle"
        android:layout_width="221dp"
        android:layout_height="97dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/scribble_font"
        android:gravity="center"
        android:text="@string/medium"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multipleChoice"
        android:layout_width="309dp"
        android:layout_height="208dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/scribble_font"
        android:text="@string/choice1"
        android:textColor="@color/colorDarkGrey"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/multipleChoice2"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/multipleChoice2"
        android:layout_width="309dp"
        android:layout_height="208dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/scribble_font"
        android:text="@string/choice2"
        android:textColor="@color/colorDarkGrey"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/multipleChoice3"
        android:layout_width="309dp"
        android:layout_height="208dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="764dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/scribble_font"
        android:text="@string/choice3"
        android:textColor="@color/colorDarkGrey"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/multipleChoice4"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/multipleChoice4"
        android:layout_width="309dp"
        android:layout_height="208dp"
        android:layout_marginTop="764dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/scribble_font"
        android:text="@string/choice4"
        android:textColor="@color/colorDarkGrey"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/solveThis"
        android:layout_width="613dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/scribble_font"
        android:text="@string/can_you_solve_this"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="294dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/scribble_font"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="627dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="984dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/scribble_font"
        android:gravity="center"
        android:text="@string/time_remaining_infinity"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText2"
        android:layout_width="268dp"
        android:layout_height="98dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/scribble_font"
        android:text="@string/time_0"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>